Upgrade sample to ReactiveMongo 0.11 and Play 2.4.3

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,10 +26,15 @@ logger.play=INFO
 logger.application=DEBUG
 
 # ReactiveMongo
-mongodb.uri = "mongodb://localhost:27017/modern-web-template"
+#mongodb.uri = "mongodb://localhost:27017/modern-web-template"
+#MONGOLAB_URI: mongodb://heroku_dlfjxl46:foqr4hj1vaucp7rasp7f12hj5t@ds027825.mongolab.com:27825/heroku_dlfjxl46
+mongodb.uri = ${MONGOLAB_URI}
 
 mongo-async-driver {
   akka {
     loglevel = DEBUG
   }
 }
+
+// See: http://reactivemongo.org/releases/0.11/documentation/tutorial/play2.html
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
